// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Render the sidebar > should be collapasible 1`] = `

<div
  role="button"
  class="cursor-pointer"
>
  <gui-lucide-arrow-left-from-line size="20">
  </gui-lucide-arrow-left-from-line>
</div>

`;

exports[`Render the sidebar > should change the theme 1`] = `

<div
  role="button"
  class="flex gap-3 items-center"
>
  <gui-lucide-moon
    classname="cursor-pointer"
    size="20"
  >
  </gui-lucide-moon>
</div>

`;

exports[`Render the sidebar > should render the pinned projects 1`] = `

<div class="relative hidden md:flex sticky top-0 w-[200px] h-screen border-r-[1px] flex-shrink-0">
  <div
    class="fixed border-t-[1px] mt-[56px]"
    style="width: 200px;"
  >
  </div>
  <div class="flex flex-col justify-between h-full fixed px-4">
    <div class="flex flex-col gap-4">
      <div class="flex flex-col gap-4">
        <a
          class="flex items-center justify-start gap-2 text-neutral-700 dark:text-neutral-200 text-xl font-medium mt-4 mb-6 h-[28px]"
          href="/"
        >
          vlt
          <span class="font-light text-neutral-400 ml-0.5">
            /vōlt/
          </span>
        </a>
        <p class="text-xs font-medium text-muted-foreground/75 dark:text-muted-foreground/50 uppercase select-none tracking-wide">
          workspaces
        </p>
        <a
          href="/dashboard"
          target="_top"
          class="relative flex justify-start gap-2 group/sidebar-link rounded-md"
        >
          <gui-lucide-layout-dashboard
            width="20"
            height="20"
          >
          </gui-lucide-layout-dashboard>
          <span class="text-sm">
            Dashboard
          </span>
          <div class="
            -mt-[7px] -ml-[5px] h-[34px] z-10 rounded-sm md:absolute
            bg-muted-foreground/25
          ">
          </div>
        </a>
        <a
          href="https://docs.vlt.sh/cli/commands/query"
          target="blank"
          class="relative flex justify-start gap-2 group/sidebar-link rounded-md"
        >
          <gui-lucide-library
            width="20"
            height="20"
          >
          </gui-lucide-library>
          <span class="text-sm">
            Docs
          </span>
          <div class="
            -mt-[7px] -ml-[5px] h-[34px] z-10 rounded-sm md:absolute
            hover:bg-muted-foreground/10 transition-all
          ">
          </div>
        </a>
      </div>
      <div class="flex flex-col mt-6">
        <p class="text-xs font-medium text-muted-foreground/75 dark:text-muted-foreground/50 uppercase select-none tracking-wide">
          pinned
        </p>
        <p class="flex flex-row justify-start items-center gap-2 group/sidebar-category-item cursor-pointer mt-4 mb-2 select-none">
          <gui-lucide-folder size="20">
          </gui-lucide-folder>
          <span class="capitalize flex text-neutral-700 dark:text-neutral-200 text-sm group-hover/sidebar-category-item:translate-x-1 transition duration-150">
            pinned projects
          </span>
          <span class="group-hover/sidebar-category-item:translate-x-1 transition duration-150">
            <gui-lucide-chevron-right
              classname="transition duration-150"
              size="16"
            >
            </gui-lucide-chevron-right>
          </span>
        </p>
      </div>
    </div>
    <div class="flex flex-col mb-[38px] gap-2">
      <div class="flex w-full justify-between items-center">
        <div
          role="button"
          class="flex gap-3 items-center"
        >
          <gui-lucide-moon
            classname="cursor-pointer"
            size="20"
          >
          </gui-lucide-moon>
        </div>
        <div
          role="button"
          class="cursor-pointer"
        >
          <gui-lucide-arrow-left-from-line size="20">
          </gui-lucide-arrow-left-from-line>
        </div>
      </div>
    </div>
  </div>
  <div
    class="fixed border-t-[1px] absolute bottom-0 mb-[95px]"
    style="width: 200px;"
  >
  </div>
</div>
<div class="flex md:hidden justify-end absolute inset-0">
  <div class="absolute p-4 cursor-pointer h-fit z-[101]">
    <gui-lucide-menu
      size="24"
      classname="text-black dark:text-white"
    >
    </gui-lucide-menu>
  </div>
  <div
    class="flex flex-col h-screen inset-0 bg-white/80 dark:bg-black/50 backdrop-blur-md w-full z-[100] px-8 py-8 mt-[3.55rem]"
    style="opacity: 0;"
  >
    <div class="flex flex-col w-full gap-4 divide-y-[1px] divide-muted-foreground/10">
      <h3 class="text-sm font-medium uppercase text-muted-foreground">
        workspaces
      </h3>
      <a
        href="/dashboard"
        class="font-medium text-lg pt-2"
      >
        Dashboard
      </a>
      <a
        href="https://docs.vlt.sh/cli/commands/query"
        class="font-medium text-lg pt-2"
      >
        Docs
      </a>
    </div>
    <div class="flex flex-col w-full gap-4 divide-y-[1px] divide-muted-foreground/10 mt-12">
      <h3 class="text-sm font-medium uppercase text-muted-foreground">
        pinned projects
      </h3>
      <a
        href="#"
        class="font-medium text-lg pt-2"
      >
        project-foo
      </a>
      <a
        href="#"
        class="font-medium text-lg pt-2"
      >
        project-bar
      </a>
    </div>
  </div>
</div>

`;

exports[`Render the sidebar > should render the sidebar on desktop 1`] = `

<div class="relative hidden md:flex sticky top-0 w-[200px] h-screen border-r-[1px] flex-shrink-0">
  <div
    class="fixed border-t-[1px] mt-[56px]"
    style="width: 200px;"
  >
  </div>
  <div class="flex flex-col justify-between h-full fixed px-4">
    <div class="flex flex-col gap-4">
      <div class="flex flex-col gap-4">
        <a
          class="flex items-center justify-start gap-2 text-neutral-700 dark:text-neutral-200 text-xl font-medium mt-4 mb-6 h-[28px]"
          href="/"
        >
          vlt
          <span class="font-light text-neutral-400 ml-0.5">
            /vōlt/
          </span>
        </a>
        <p class="text-xs font-medium text-muted-foreground/75 dark:text-muted-foreground/50 uppercase select-none tracking-wide">
          workspaces
        </p>
        <a
          href="/dashboard"
          target="_top"
          class="relative flex justify-start gap-2 group/sidebar-link rounded-md"
        >
          <gui-lucide-layout-dashboard
            width="20"
            height="20"
          >
          </gui-lucide-layout-dashboard>
          <span class="text-sm">
            Dashboard
          </span>
          <div class="
            -mt-[7px] -ml-[5px] h-[34px] z-10 rounded-sm md:absolute
            hover:bg-muted-foreground/10 transition-all
          ">
          </div>
        </a>
        <a
          href="https://docs.vlt.sh/cli/commands/query"
          target="blank"
          class="relative flex justify-start gap-2 group/sidebar-link rounded-md"
        >
          <gui-lucide-library
            width="20"
            height="20"
          >
          </gui-lucide-library>
          <span class="text-sm">
            Docs
          </span>
          <div class="
            -mt-[7px] -ml-[5px] h-[34px] z-10 rounded-sm md:absolute
            hover:bg-muted-foreground/10 transition-all
          ">
          </div>
        </a>
      </div>
      <div class="flex flex-col mt-6">
        <p class="text-xs font-medium text-muted-foreground/75 dark:text-muted-foreground/50 uppercase select-none tracking-wide">
          pinned
        </p>
        <p class="flex flex-row justify-start items-center gap-2 group/sidebar-category-item cursor-pointer mt-4 mb-2 select-none">
          <gui-lucide-folder size="20">
          </gui-lucide-folder>
          <span class="capitalize flex text-neutral-700 dark:text-neutral-200 text-sm group-hover/sidebar-category-item:translate-x-1 transition duration-150">
            pinned projects
          </span>
          <span class="group-hover/sidebar-category-item:translate-x-1 transition duration-150">
            <gui-lucide-chevron-right
              classname="transition duration-150"
              size="16"
            >
            </gui-lucide-chevron-right>
          </span>
        </p>
      </div>
    </div>
    <div class="flex flex-col mb-[38px] gap-2">
      <div class="flex w-full justify-between items-center">
        <div
          role="button"
          class="flex gap-3 items-center"
        >
          <gui-lucide-moon
            classname="cursor-pointer"
            size="20"
          >
          </gui-lucide-moon>
        </div>
        <div
          role="button"
          class="cursor-pointer"
        >
          <gui-lucide-arrow-left-from-line size="20">
          </gui-lucide-arrow-left-from-line>
        </div>
      </div>
    </div>
  </div>
  <div
    class="fixed border-t-[1px] absolute bottom-0 mb-[95px]"
    style="width: 200px;"
  >
  </div>
</div>
<div class="flex md:hidden justify-end absolute inset-0">
  <div class="absolute p-4 cursor-pointer h-fit z-[101]">
    <gui-lucide-menu
      size="24"
      classname="text-black dark:text-white"
    >
    </gui-lucide-menu>
  </div>
  <div
    class="flex flex-col h-screen inset-0 bg-white/80 dark:bg-black/50 backdrop-blur-md w-full z-[100] px-8 py-8 mt-[3.55rem]"
    style="opacity: 0;"
  >
    <div class="flex flex-col w-full gap-4 divide-y-[1px] divide-muted-foreground/10">
      <h3 class="text-sm font-medium uppercase text-muted-foreground">
        workspaces
      </h3>
      <a
        href="/dashboard"
        class="font-medium text-lg pt-2"
      >
        Dashboard
      </a>
      <a
        href="https://docs.vlt.sh/cli/commands/query"
        class="font-medium text-lg pt-2"
      >
        Docs
      </a>
    </div>
  </div>
</div>

`;

exports[`Render the sidebar > should render the sidebar on mobile 1`] = `

<div class="relative hidden md:flex sticky top-0 w-[200px] h-screen border-r-[1px] flex-shrink-0">
  <div
    class="fixed border-t-[1px] mt-[56px]"
    style="width: 200px;"
  >
  </div>
  <div class="flex flex-col justify-between h-full fixed px-4">
    <div class="flex flex-col gap-4">
      <div class="flex flex-col gap-4">
        <a
          class="flex items-center justify-start gap-2 text-neutral-700 dark:text-neutral-200 text-xl font-medium mt-4 mb-6 h-[28px]"
          href="/"
        >
          vlt
          <span class="font-light text-neutral-400 ml-0.5">
            /vōlt/
          </span>
        </a>
        <p class="text-xs font-medium text-muted-foreground/75 dark:text-muted-foreground/50 uppercase select-none tracking-wide">
          workspaces
        </p>
        <a
          href="/dashboard"
          target="_top"
          class="relative flex justify-start gap-2 group/sidebar-link rounded-md"
        >
          <gui-lucide-layout-dashboard
            width="20"
            height="20"
          >
          </gui-lucide-layout-dashboard>
          <span class="text-sm">
            Dashboard
          </span>
          <div class="
            -mt-[7px] -ml-[5px] h-[34px] z-10 rounded-sm md:absolute
            hover:bg-muted-foreground/10 transition-all
          ">
          </div>
        </a>
        <a
          href="https://docs.vlt.sh/cli/commands/query"
          target="blank"
          class="relative flex justify-start gap-2 group/sidebar-link rounded-md"
        >
          <gui-lucide-library
            width="20"
            height="20"
          >
          </gui-lucide-library>
          <span class="text-sm">
            Docs
          </span>
          <div class="
            -mt-[7px] -ml-[5px] h-[34px] z-10 rounded-sm md:absolute
            hover:bg-muted-foreground/10 transition-all
          ">
          </div>
        </a>
      </div>
      <div class="flex flex-col mt-6">
        <p class="text-xs font-medium text-muted-foreground/75 dark:text-muted-foreground/50 uppercase select-none tracking-wide">
          pinned
        </p>
        <p class="flex flex-row justify-start items-center gap-2 group/sidebar-category-item cursor-pointer mt-4 mb-2 select-none">
          <gui-lucide-folder size="20">
          </gui-lucide-folder>
          <span class="capitalize flex text-neutral-700 dark:text-neutral-200 text-sm group-hover/sidebar-category-item:translate-x-1 transition duration-150">
            pinned projects
          </span>
          <span class="group-hover/sidebar-category-item:translate-x-1 transition duration-150">
            <gui-lucide-chevron-right
              classname="transition duration-150"
              size="16"
            >
            </gui-lucide-chevron-right>
          </span>
        </p>
      </div>
    </div>
    <div class="flex flex-col mb-[38px] gap-2">
      <div class="flex w-full justify-between items-center">
        <div
          role="button"
          class="flex gap-3 items-center"
        >
          <gui-lucide-moon
            classname="cursor-pointer"
            size="20"
          >
          </gui-lucide-moon>
        </div>
        <div
          role="button"
          class="cursor-pointer"
        >
          <gui-lucide-arrow-left-from-line size="20">
          </gui-lucide-arrow-left-from-line>
        </div>
      </div>
    </div>
  </div>
  <div
    class="fixed border-t-[1px] absolute bottom-0 mb-[95px]"
    style="width: 200px;"
  >
  </div>
</div>
<div class="flex md:hidden justify-end absolute inset-0">
  <div class="absolute p-4 cursor-pointer h-fit z-[101]">
    <gui-lucide-menu
      size="24"
      classname="text-black dark:text-white"
    >
    </gui-lucide-menu>
  </div>
  <div
    class="flex flex-col h-screen inset-0 bg-white/80 dark:bg-black/50 backdrop-blur-md w-full z-[100] px-8 py-8 mt-[3.55rem]"
    style="opacity: 0;"
  >
    <div class="flex flex-col w-full gap-4 divide-y-[1px] divide-muted-foreground/10">
      <h3 class="text-sm font-medium uppercase text-muted-foreground">
        workspaces
      </h3>
      <a
        href="/dashboard"
        class="font-medium text-lg pt-2"
      >
        Dashboard
      </a>
      <a
        href="https://docs.vlt.sh/cli/commands/query"
        class="font-medium text-lg pt-2"
      >
        Docs
      </a>
    </div>
  </div>
</div>

`;
